Added: teams, graceful shutdown
